Added CommandManager and example command...

--- a/FastBOT/config.json
+++ b/FastBOT/config.json
@@ -1,5 +1,6 @@
 {
   "settings": {
-    "token": "NjkxMjA2NjY1OTIzNTkyMjIy.XncmXw.vD0OZDuFCWt5M33xj-9wlLTjq5I"
+    "token": "here token",
+    "prefix": "!"
   }
 }
